cft-templates/windows-remotedesktop.yml
Metadata:
  License: Apache-2.0
AWSTemplateFormatVersion: "2010-09-09"
Description: "AWS CloudFormation Sample Template EIP_With_Association: This template demonstrates how to associate an Elastic IP address with an Amazon EC2 instance. You can use this same technique to associate an EC2 instance with an Elastic IP address that is not created inside the template by replacing the EIP reference with the IP address of an external EIP."

Parameters:
  Namespace:
    Type: String
    Description: An environment name that will be prefixed to resource names
  Password:
    Type: String
    NoEcho: True
    Description: The administrator password must be at least six characters long and include characters from at least three of the following categories- English uppercase letters, English lowercase letters, base-10 digits and non-alphabetic symbols. 
  InstanceType:
    Description: Choose the instance type for this instance. e.g. t3.small
    Type: String
    Default: t3.small
    AllowedValues: [t3.nano, t3.micro, t3.small, t3.medium]
    ConstraintDescription: must be a valid EC2 instance type.
  KeyPair:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance. If no key pairs exist, please create one from the button next to the dropdown. Please contact your Administrator if you are unable to create one.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  AllowedSSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: "9"
    MaxLength: "18"
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  SSMPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      ManagedPolicyName: !Join ["-", [Ref: Namespace, "SSM-Policy"]]
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - ssm:*
            Resource: "*"

  IAMRole:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: !Join ["-", [Ref: Namespace, "ec2-role"]]
      Path: "/"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      ManagedPolicyArns:
        - Ref: SSMPolicy

  InstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      InstanceProfileName: !Join ["-", [Ref: Namespace, "ec2-profile"]]
      Path: "/"
      Roles:
        - Ref: IAMRole

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      UserData:
        Fn::Base64: !Sub |
          <powershell>     
          # Redirect stdout and stderr to a log file and the console
          $scriptPath = "C:\Users\Administrator\log\user-data.log"
          Start-Transcript -Path $scriptPath -Append  
          
          net user Administrator ${Password}

          echo "setting user token for nice-dcv"
          C:\Users\Administrator\set_user_token.bat  

          echo "signal cft to success/failure"
          cfn-signal.exe -e $lastexitcode --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region}

          # End the transcript (stop logging)
          Stop-Transcript
          </powershell>
      InstanceType: !Ref "InstanceType"
      PropagateTagsToVolumeOnCreation: true
      SecurityGroups:
        - !Ref "InstanceSecurityGroup"
      KeyName: !Ref "KeyPair"
      ImageId: "{{resolve:ssm:/RL/RG/StandardCatalog/windows-nice-dcv-ami}}"
      IamInstanceProfile: !Ref InstanceProfile
      Tags:
        - Key: Name
          Value: !Join ["-", [Ref: AWS::StackName, "windows-server"]]
        - Key: Description
          Value: windows workspace instance
        - Key: cost_resource
          Value: !Sub ${AWS::StackName}

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: !Ref "AllowedSSHLocation"
        - IpProtocol: tcp
          FromPort: "3389"
          ToPort: "3389"
          CidrIp: !Ref "AllowedSSHLocation"
        - IpProtocol: tcp
          FromPort: "5986"
          ToPort: "5986"
          CidrIp: !Ref "AllowedSSHLocation"
        - IpProtocol: tcp
          FromPort: "8443"
          ToPort: "8443"
          CidrIp: !Ref "AllowedSSHLocation"

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref "EC2Instance"
  InstanceIPAddress:
    Description: IP address of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicIp]
  InstanceDNSName:
    Description: DNS name of the newly created EC2 instance
    Value: !GetAtt [EC2Instance, PublicDnsName]
  AvailabilityZone:
    Description: AvailabilityZone of newly created EC2 instance
    Value: !GetAtt [EC2Instance, AvailabilityZone]
  ApplicationPort:
    Description: The Port in which the application is running
    Value: "8443"
